pint-pandas Changelog
=====================

0.5 (unreleased)
----------------

<<<<<<< HEAD
- Support for Pandas version 2.1.0 (including dtype-preserving `PintArray.map`) #196
- Support for <NA> values in columns with integer magnitudes
- Support for magnitudes of any type, such as complex128 or tuples #146
- Support for pandas 2.0, allowing `.cumsum, .cummax, .cummin` methods for `Series` and `DataFrame`. #186
- Minimum Pint version is 0.21
- Minimum Pandas vesrion is 2.0
- Support for unit registries with `force_ndarray_like = True`. #165
- A DataFrame/Series.pint.convert_object_dtype() function has been added to create PintArrays from Series of quantities.

0.4 (2023-05-23)
----------------

- Support for <NA> values in columns with integer magnitudes
- Support for magnitudes of any type, such as complex128 or tuples #146
- Support for Pint 0.21 #168, #179
- Cast to `numpy.ndarray` in `PintArray._reduce` if needed to use `nanops` functions
- Minimum Pint version is 0.21
- Minimum Pandas vesrion is 1.6

0.3 (2022-11-14)
----------------

- Support for pandas 1.5, with a significant uplift in capability. Many operations that gave results with object
  dtype now give PintArrays. #133
- Fixed a bug which caused the creation of PintArray (and even more so all binary mathematical operations)
  to convert input arrays to lists of Quantity, thereby causing a huge slowdown. #80
- Fixed a bug where listlike operands in binary operations were not correctly converted to Quantity arrays. #86
- Fixed pickling of `PintArray` instances. #71
- Fixed a bug where units of a quantity where ignored when creating a PintArray. #104
- Quantity arrays may be used to initialise PintArrays without specifying the dtype. #104
- Fixed a bug where `.astype("string[pyarrow]")` would not create pyarrow-backed arrays. #101
- Fixed bug preventing adding to empty slices of PintArrays #69
- Notebook updated to show plotting #116 #9 #43