@@ -844,9 +844,14 @@ class PintArray(ExtensionArray, ExtensionOpsMixin):
         If mapper is a function, operate on the magnitudes of the array and
 
         """
-        from pandas.core.algorithms import map_array
+        if pandas_version_info < (2, 1):
+            ser = pd.Series(self._to_array_of_quantity())
+            arr = ser.map(mapper, na_action).values
+        else:
+            from pandas.core.algorithms import map_array
 
-        arr = map_array(self, mapper, na_action)
+            arr = map_array(self, mapper, na_action)
+
         master_scalar = None
         try:
             master_scalar = next(i for i in arr if hasattr(i, "units"))
